# goon-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: bum-version.yml  release.yml
gooncli/: __main__.py  anim-list.txt  app.py  config.py  henlist.txt  logo.txt  logo_mobile.txt  main.py  ph-namelist.txt  vids-list.txt
